Updated DataPersistanceUser and fixd for Java SE8